fixed alignment

--- a/css/style.css
+++ b/css/style.css
@@ -199,7 +199,7 @@ section { padding: 7rem 0; }
   display: flex;
   align-items: stretch;
   justify-content: space-between;
-  margin-bottom: 1.5rem;
+  margin-bottom: 0.5rem;
   flex-wrap: wrap;
   gap: 1.5rem;
 }
